<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="pressUp"
            type="com.example.alexa.pressupcounter.PressUp"/>
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/shape_for_recycler_item">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Успешное занятие №"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@{String.valueOf(pressUp.id)}"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header"
        tools:text="1"/>

    <!-- table -->

    <TextView
        android:id="@+id/repetition_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Подход"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontal_first_separator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="@id/fifth_repetition_counter"
        app:layout_constraintTop_toBottomOf="@id/repetition_header_text_view" />

    <TextView
        android:id="@+id/repetition_quantity_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Повторения"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repetition_header_text_view" />

    <View
        android:id="@+id/vertical_first_separator"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@id/repetition_quantity_header_text_view"
        app:layout_constraintStart_toEndOf="@id/repetition_quantity_header_text_view"
        app:layout_constraintTop_toTopOf="@id/repetition_header_text_view" />

    <TextView
        android:id="@+id/first_repetition_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@color/colorBlack"
        android:text="@{String.valueOf(pressUp.firstRepetition)}"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/repetition_quantity_header_text_view"
        app:layout_constraintStart_toEndOf="@id/vertical_first_separator"
        tools:ignore="RtlCompat"
        tools:text="20" />

    <TextView
        android:id="@+id/first_repetition_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_first_repetition"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
        app:layout_constraintEnd_toEndOf="@id/first_repetition_counter"
        app:layout_constraintStart_toStartOf="@id/first_repetition_counter" />

    <TextView
        android:id="@+id/second_repetition_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:text="@{String.valueOf(pressUp.secondRepetition)}"
        app:layout_constraintBottom_toBottomOf="@id/first_repetition_counter"
        app:layout_constraintStart_toEndOf="@id/first_repetition_counter"
        tools:ignore="RtlCompat"
        tools:text="21" />

    <TextView
        android:id="@+id/second_repetition_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_second_repetition"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
        app:layout_constraintEnd_toEndOf="@id/second_repetition_counter"
        app:layout_constraintStart_toStartOf="@id/second_repetition_counter" />

    <TextView
        android:id="@+id/third_repetition_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:text="@{String.valueOf(pressUp.thirdRepetition)}"
        app:layout_constraintBottom_toBottomOf="@id/second_repetition_counter"
        app:layout_constraintStart_toEndOf="@id/second_repetition_counter"
        tools:ignore="RtlCompat"
        tools:text="23" />

    <TextView
        android:id="@+id/third_repetition_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_third_repetition"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
        app:layout_constraintEnd_toEndOf="@id/third_repetition_counter"
        app:layout_constraintStart_toStartOf="@id/third_repetition_counter" />

    <TextView
        android:id="@+id/fourth_repetition_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:text="@{String.valueOf(pressUp.fourthRepetition)}"
        app:layout_constraintBottom_toBottomOf="@id/third_repetition_counter"
        app:layout_constraintStart_toEndOf="@id/third_repetition_counter"
        tools:ignore="RtlCompat"
        tools:text="25" />

    <TextView
        android:id="@+id/fourth_repetition_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_fourth_repetition"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
        app:layout_constraintEnd_toEndOf="@id/fourth_repetition_counter"
        app:layout_constraintStart_toStartOf="@id/fourth_repetition_counter" />

    <TextView
        android:id="@+id/fifth_repetition_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:text="@{String.valueOf(pressUp.fifthRepetition)}"
        app:layout_constraintBottom_toBottomOf="@id/fourth_repetition_counter"
        app:layout_constraintStart_toEndOf="@id/fourth_repetition_counter"
        tools:ignore="RtlCompat"
        tools:text="30" />

    <TextView
        android:id="@+id/fifth_repetition_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_fifth_repetition"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
        app:layout_constraintEnd_toEndOf="@id/fifth_repetition_counter"
        app:layout_constraintStart_toStartOf="@id/fifth_repetition_counter" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>