<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.alexa.pressupcounter.setprogram.viewmodel.SetProgramViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/introduction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Выберите программу для первого занятия:"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/repetition_header_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_center_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <View
            android:id="@+id/horizontal_first_separator"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/horizontal_center_guidline" />

        <TextView
            android:id="@+id/repetition_quantity_header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Повторения"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/first_repetition_counter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_first_separator" />

        <TextView
            android:id="@+id/first_repetition_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@{String.valueOf(safeUnbox(viewModel.firstRepetition))}"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/repetition_quantity_header_text_view"
            app:layout_constraintEnd_toStartOf="@+id/second_repetition_counter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/repetition_quantity_header_text_view"
            app:layout_constraintTop_toTopOf="@+id/repetition_quantity_header_text_view"
            tools:ignore="RtlCompat"
            tools:text="20" />

        <TextView
            android:id="@+id/second_repetition_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{String.valueOf(safeUnbox(viewModel.secondRepetition))}"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/first_repetition_counter"
            app:layout_constraintEnd_toStartOf="@+id/third_repetition_counter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/first_repetition_counter"
            app:layout_constraintTop_toTopOf="@+id/first_repetition_counter"
            tools:ignore="RtlCompat"
            tools:text="21" />

        <TextView
            android:id="@+id/third_repetition_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{String.valueOf(safeUnbox(viewModel.thirdRepetition))}"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/second_repetition_counter"
            app:layout_constraintEnd_toStartOf="@+id/fourth_repetition_counter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/second_repetition_counter"
            app:layout_constraintTop_toTopOf="@+id/second_repetition_counter"
            tools:ignore="RtlCompat"
            tools:text="23" />

        <TextView
            android:id="@+id/fourth_repetition_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{String.valueOf(safeUnbox(viewModel.fourthRepetition))}"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/third_repetition_counter"
            app:layout_constraintEnd_toStartOf="@+id/fifth_repetition_counter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/third_repetition_counter"
            app:layout_constraintTop_toTopOf="@+id/third_repetition_counter"
            tools:ignore="RtlCompat"
            tools:text="25" />

        <TextView
            android:id="@+id/fifth_repetition_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{String.valueOf(safeUnbox(viewModel.fifthRepetition))}"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/fourth_repetition_counter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fourth_repetition_counter"
            app:layout_constraintTop_toTopOf="@+id/fourth_repetition_counter"
            tools:ignore="RtlCompat"
            tools:text="30" />

        <!--ниже - верхний ряд View таблицы-->

        <TextView
            android:id="@+id/repetition_header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Подход"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/repetition_quantity_header_text_view"
            app:layout_constraintStart_toStartOf="@id/repetition_quantity_header_text_view" />

        <TextView
            android:id="@+id/first_repetition_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_first_repetition"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
            app:layout_constraintEnd_toEndOf="@id/first_repetition_counter"
            app:layout_constraintStart_toStartOf="@id/first_repetition_counter" />

        <TextView
            android:id="@+id/second_repetition_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_second_repetition"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
            app:layout_constraintEnd_toEndOf="@id/second_repetition_counter"
            app:layout_constraintStart_toStartOf="@id/second_repetition_counter" />

        <TextView
            android:id="@+id/third_repetition_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_third_repetition"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
            app:layout_constraintEnd_toEndOf="@id/third_repetition_counter"
            app:layout_constraintStart_toStartOf="@id/third_repetition_counter" />

        <TextView
            android:id="@+id/fourth_repetition_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_fourth_repetition"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
            app:layout_constraintEnd_toEndOf="@id/fourth_repetition_counter"
            app:layout_constraintStart_toStartOf="@id/fourth_repetition_counter" />

        <TextView
            android:id="@+id/fifth_repetition_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_fifth_repetition"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_first_separator"
            app:layout_constraintEnd_toEndOf="@id/fifth_repetition_counter"
            app:layout_constraintStart_toStartOf="@id/fifth_repetition_counter" />

        <!-- конец таблицы -->

        <TextView
            android:id="@+id/summ_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Всего отжиманий: "
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/repetition_quantity_header_text_view"
            app:layout_constraintTop_toBottomOf="@id/repetition_quantity_header_text_view" />

        <TextView
            android:id="@+id/summ_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(safeUnbox(viewModel.sumOfRepetitions))}"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/summ_header"
            app:layout_constraintStart_toEndOf="@id/summ_header"
            tools:text="10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:onClick="@{() -> viewModel.onIncrementButton()}"
            android:text="+"
            app:layout_constraintEnd_toStartOf="@id/vertical_center_guideline"
            app:layout_constraintTop_toBottomOf="@id/summ_header" />

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="@{() -> viewModel.onDecrementButton()}"
            android:text="-"
            android:visibility="@{viewModel.sumOfRepetitions.get() > 10 ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintStart_toEndOf="@id/vertical_center_guideline"
            app:layout_constraintTop_toTopOf="@id/increment_button" />

        <Button
            android:id="@+id/start_train_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> viewModel.onClickTrainingButton()}"
            android:text="выбрать программу"
            app:layout_constraintEnd_toEndOf="@id/decrement_button"
            app:layout_constraintStart_toStartOf="@id/increment_button"
            app:layout_constraintTop_toBottomOf="@id/increment_button" />

        <TextView
            android:id="@+id/service_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{viewModel.serviceInfo}"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_train_btn"
            tools:text="SERVICE_INFO" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>